# learning_proj

./: .gitignore  Qwen接入与学习项目优化建议.md  README.md  admin-quick-reference.md  api-design-v1.md  app.py  challenger-review-001.md  challenger-review-v3.md  deployment-plan-v1.md  docker-compose.yml  git-commit-log-001.md  git-init-request.md  learning-agent-system-plan-v3.md  learning-agent-system-plan.md  main.py  meta-analysis.md  plan.md  pytest.ini  requirements.md  requirements.txt  run_api.py  start.bat  stop.bat  team-config.md  team-structure.md  technical-architecture-v1.md  test-openai.py  worker-roles-config.md  产品问题清单与修复优先级.md  架构设计.md  落地方案.md  项目架构审查与数据流分析.md
projects/learning-system/: DEVOPS_FIX_REPORT.md  DEVOPS_TASKS.md  Dockerfile  INSTALL.md  PROGRESS.md  README.md  TESTER.md  TEST_PLAN.md  TEST_REPORT.md  USAGE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.py
projects/learning-system/src/: __init__.py  api.py  communication.py  main.py  tester.py  web.py  workers.py
projects/learning-system/src/core/: __init__.py  agent.py  memory.py  vector_db.py
projects/learning-system/src/knowledge-base/: __init__.py  knowledge_base.py
projects/learning-system/src/knowledge_base/: __init__.py  storage.py
projects/learning-system/src/learning/: __init__.py  optimizer.py  reflection.py
projects/learning-system/src/learning-generator/: __init__.py  generator.py
projects/learning-system/src/learning_generator/: __init__.py  generator.py  models.py
projects/learning-system/tests/: test_core.py  test_generator.py
(+210 files in other folders)
